# ranger

./: .coveragerc  .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  Dockerfile  Dockerfile-Ranger-Client  Dockerfile-cli  HACKING.rst  Makefile  Makefile-Ranger-Client  README.md  README.rst  bandit.yaml  config.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
etc/: localrc  logging.conf  orm.conf  ranger.conf
etc/ranger/: ranger.conf
images/ranger/: Dockerfile
images/rangercli/: Dockerfile
orm/: _i18n.py  app.py  base_config.py
orm/cmd/: audit.py  cms.py  db_drop.py  db_setup.py  db_sync.py  fms.py  ims.py  keystone.py  rms.py  uuidgen.py
orm/common/: config.py  tox.ini
orm/common/client/audit/: CONTRIBUTING.rst  HACKING.rst  README.rst  setup.cfg  setup.py  test-requirements.txt  tox.ini
orm/common/client/audit/audit_client/: __init__.py
orm/common/client/audit/audit_client/api/: __init__.py  audit.py
orm/common/client/audit/audit_client/api/exceptions/: __init__.py  audit_exception.py
orm/common/client/audit/audit_client/api/model/: get_audits_result.py  transaction.py
orm/common/client/audit/audit_client/examples/: __init__.py  get_audits.py  put_audit.py
orm/common/client/audit/audit_client/tests/api/: test_audit.py
orm/common/client/audit/audit_client/tests/api/model/: test_get_audits_result.py
orm/orm_client/: requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
orm/orm_client/db_clear/: cli_comander.py  cms_cleaner.py  config.py  db_comander.py  initializer.py  resource_cleaner.py  utils.py  yaml_handler.py
orm/orm_client/debian/: aic-orm-ormclient.install  changelog  control  copyright  orm_client.install  postrm  rules
orm/orm_client/flavorgen/: README  flavorator.py  make_flav.py  make_flavor.py  regionator.py
orm/orm_client/imagegen/: README  imageator.py  regionator.py
orm/orm_client/ormcli/: README  __init__.py  cli_common.py  cmscli.py  config.py  fmscli.py  imscli.py  orm  ormcli.py  rmscli.py
orm/services/: db_cleanup.py  db_setup.py
orm/services/audit_trail_manager/: audit_server.conf  audit_server.wsgi  config.py  debug_service.py  tox.ini
orm/services/customer_manager/: cms_rest.conf  cms_rest.wsgi  config.py  gulpfile.js  package.json  pycharm_init.py  tox.ini
orm/services/flavor_manager/: config.py  fms_rest.conf  fms_rest.wsgi  run_pecan.py  tox.ini
orm/services/id_generator/: TODO  config.py  requirements.txt  test-requirements.txt  tox.ini  uuidgen.conf  uuidgen.wsgi
orm/services/image_manager/: config.py  data_manager_test.py  ims.conf  ims.wsgi  pycharm_init.py  tox.ini
orm/services/region_manager/: config.py  csv2db.py  readme.md  revert_csv2db.py  rms.conf  rms.wsgi  tox.ini
orm/services/resource_distributor/: config.py  rds.conf  rds.wsgi  tox.ini
orm/tests/: config.py  test_functional.py
ranger/: __init__.py
ranger-tempest-plugin/: .gitignore  Dockerfile  changed_python_files.sh  pylintrc  setup.cfg  setup.py
ranger-tempest-plugin/ranger_tempest_plugin/: README.rst  clients.py  config.py  plugin.py
ranger-tempest-plugin/ranger_tempest_plugin/schemas/: customers_schema.py  flavors_schema.py  group_schema.py  images_schema.py
ranger-tempest-plugin/ranger_tempest_plugin/services/: base_client.py  clients.py  cms_client.py  fms_client.py  grp_client.py  ims_client.py  rms_client.py
ranger-tempest-plugin/ranger_tempest_plugin/tests/api/: base.py  cms_base.py  fms_base.py  grp_base.py  ims_base.py  test_customers.py  test_customers_negative.py  test_flavors.py  test_groups.py  test_images.py  test_images_negative.py  test_regions.py
ranger-tempest-plugin/tempest_setup/: tempest.conf
ranger/tests/: test_ranger.py
ranger_tempest_tests/: Dockerfile  setup.cfg  setup.py  tox.ini
ranger_tempest_tests/aic-orm-tempest-plugin/: .gitignore  flake8rc  requirements.txt  setup.cfg
ranger_tempest_tests/aic-orm-tempest-plugin/aic_orm_tempest_plugin/: README.rst  clients.py  config.py  data_utils.py  plugin.py
ranger_tempest_tests/aic-orm-tempest-plugin/aic_orm_tempest_plugin/schemas/: flavors_schema.py  regions_schema.py
ranger_tempest_tests/aic-orm-tempest-plugin/aic_orm_tempest_plugin/services/: base_client.py  cms_client.py  fms_client.py  ims_client.py  rms_client.py
ranger_tempest_tests/aic-orm-tempest-plugin/aic_orm_tempest_plugin/tests/api/: base.py  cms_base.py  fms_base.py  ims_base.py  rms_base.py  test_customers.py  test_customers_negative.py  test_flavors.py  test_flavors_negative.py  test_images.py  test_images_negative.py  test_region_groups.py  test_regiongroups_negative.py  test_regions.py  test_regions_negative.py
ranger_tempest_tests/ranger_tempest_plugin/: README.rst  config.py  data_utils.py  plugin.py  ranger_tempest_plugin-blacklist.txt
ranger_tempest_tests/ranger_tempest_plugin/schemas/: regions_schema.py
ranger_tempest_tests/ranger_tempest_plugin/services/: cms_client.py  fms_client.py
ranger_tempest_tests/ranger_tempest_plugin/tests/api/: base.py  cms_base.py  fms_base.py  rms_base.py  test_customers.py  test_flavors.py  test_flavors_negative.py  test_images.py  test_region_groups.py  test_regiongroups_negative.py  test_regions.py  test_regions_negative.py
ranger_tempest_tests/tempest_setup/: .testr.conf  accounts.yaml  create_tenant.sh  tempest.conf
releasenotes/source/: conf.py  index.rst
tools/: clear_install_files.sh  create_customer.sql  create_region_customer.sh  localrc  openrc  ranger_create_db.sh  ranger_setup.sh  rangercli.sh  setenv.sh  setup_apache.sh  setup_orm.sh  stack_orm.sh  start_services.sh
tools/config/: ranger-config-generator.conf
zuul.d/: project.yaml
(+685 files in other folders)
