[metadata]
name = orm
version = 2016.3.0
summary = OpenStack Resource Manager
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7


[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = orm

[entry_points]
console_scripts=
    orm-fms = orm.cmd.fms:main
    orm-cms = orm.cmd.cms:main
    orm-rms = orm.cmd.rms:main
    orm-rds = orm.cmd.rds:main
    orm-ims = orm.cmd.ims:main
    orm-audit = orm.cmd.audit:main
    orm-uuidgen = orm.cmd.uuidgen:main
oslo.config.opts =
    ranger = orm.common.config:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = orm/locale
domain = orm

[update_catalog]
domain = orm
output_dir = orm/locale
input_file = orm/locale/orm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = orm/locale/orm.pot

[wheel]
universal = 1

[pbr]
autodoc_index_modules = 1
warnerrors = true


[nosetests]
match=^test
where=orm
nocapture=1
cover-package=orm
cover-erase=1
