[metadata]
name = ranger
version = 2016.3.0
summary = OpenStack Resource Manager
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = ranger
data_files =
    /etc/ranger =
       etc/ranger/ranger.conf

[entry_points]
console_scripts=
    ranger-fms = orm.cmd.fms:main
    ranger-cms = orm.cmd.cms:main
    ranger-rms = orm.cmd.rms:main
    ranger-rds = orm.cmd.rds:main
    ranger-ims = orm.cmd.ims:main
    ranger-audit = orm.cmd.audit:main
    ranger-uuidgen = orm.cmd.uuidgen:main
    ranger-dbsync = orm.cmd.db_sync:main
oslo.config.opts =
    ranger = orm.common.config:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = orm/locale
domain = ranger

[update_catalog]
domain = ranger
output_dir = orm/locale
input_file = orm/locale/orm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = orm/locale/orm.pot

[wheel]
universal = 1

[pbr]
autodoc_index_modules = 1
warnerrors = true


[nosetests]
match=^test
where=orm
nocapture=1
cover-package=orm
cover-erase=1
