[metadata]
name = ranger-tempest-plugin
version = 0.0.1
summary = Basic Tempest plugin for Orm with a mos tempest smoke test case
description-file = 
author = 
author-email = 
home-page = 
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: OpenStack Development Team
    Intended Audience :: OpenStack QA Team
    Intended Audience :: Information Technology
    Operating System :: Linux
    Natural Language :: English
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Programming Language :: Python
keywords =
    Plugin
    Tempest
    OpenStack

[files]
packages = ranger_tempest_plugin

[entry_points]
tempest.test_plugins =
    ranger-tempest-plugin = ranger_tempest_plugin.plugin:RangerPlugin

[pbr]
warnerrors = true
